--- a/home.html
+++ b/home.html
@@ -25,7 +25,7 @@
 
     <!-- Front Page -->
     <div class="container">
-        <p>Helping you get the right diagnosis and medication recommendations.</p>
+        <p>Helping you to get the right diagnosis and medication recommendations.</p>
         <a href="patient_form.html" class="start-button">Start Diagnosis</a>
 
         <!-- Information Section -->
